@@ -148,7 +148,7 @@ Rcpp::List RcppRamp::getScanHeaderInfo ( int whichScan  )
         delete info;
 
         std::vector<std::string> names;
-        Rcpp::List header(21);
+        Rcpp::List header(22);
         int i = 0;
 
         names.push_back("seqNum");
@@ -193,6 +193,8 @@ Rcpp::List RcppRamp::getScanHeaderInfo ( int whichScan  )
         header[i++] = Rcpp::wrap(data.mergedResultStartScanNum);
         names.push_back("mergedResultEndScanNum");
         header[i++] = Rcpp::wrap(data.mergedResultEndScanNum);
+        names.push_back("injectionTime");
+        header[i++] = 0;
 
         header.attr("names") = names;
 
@@ -260,7 +262,7 @@ Rcpp::DataFrame RcppRamp::getAllScanHeaderInfo ( )
                 mergedResultEndScanNum[whichScan-1] = scanHeader.mergedResultEndScanNum;
             }
 
-            Rcpp::List header(21);
+            Rcpp::List header(22);
             std::vector<std::string> names;
             int i = 0;
 
@@ -306,6 +308,8 @@ Rcpp::DataFrame RcppRamp::getAllScanHeaderInfo ( )
             header[i++] =Rcpp::wrap(mergedResultStartScanNum);
             names.push_back("mergedResultEndScanNum");
             header[i++] =Rcpp::wrap(mergedResultEndScanNum);
+            names.push_back("injectionTime");
+            header[i++] = 0;
             
 			header.attr("names") = names;
 			
